--- a/css/acupuncture.css
+++ b/css/acupuncture.css
@@ -168,6 +168,7 @@ input::placeholder {
 
 .doctor-column {
   flex-basis: 45%;
+  margin: 20px;
 }
 
 .doctor-link {
@@ -179,8 +180,8 @@ input::placeholder {
   align-items: center;
   background-color: #f9ced8;
   border-radius: 20px;
-  padding: 10px 20px;
-  margin: 10px 0;
+  padding: 20px 20px;
+  margin: 40px 0;
   box-shadow: 0 4px 8px rgba(0,0,0,0.1);
   transition: box-shadow 0.3s ease; /* Animasi saat hover */
 }
