feat: ERD, registration until fetch data

--- a/css/main.css
+++ b/css/main.css
@@ -4,7 +4,9 @@
 
 /*//////////////////////////////////////////////////////////////////
 [ FONT ]*/
-
+a{
+  text-decoration: none;
+}
 @font-face {
   font-family: Poppins-Regular;
   src: url('../fonts/poppins/Poppins-Regular.ttf'); 
