--- a/css/appoinment.css
+++ b/css/appoinment.css
@@ -84,7 +84,7 @@ h1 {
 h2 {
   font-weight: bold;
   font-size: 2rem;
-  text-align: start;
+  /* text-align: start; */
   color: var(--accent-color);
 }
 
